src/objects/inscor__Object_Updates__mdt.object
<CustomObject>
    <fields>
        <fullName>inscor__Change_Description__c</fullName>
        <label>Change Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Change_Title__c</fullName>
        <label>Change Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Method_Name__c</fullName>
        <label>Method Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Done</fullName>
                    <default>true</default>
                    <label>Not Done</label>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Object Updates</label>
    <pluralLabel>Object Updates</pluralLabel>
</CustomObject>